UI broken in 4.2 when preferences are saved with 4.3 #126706
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#126706
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-22 21:37, hash:
d5e591b3dc8c
Short description of error
I don't know if this qualifies as a bug. I know forward compatiblity is never guaranteed, but I just find this one pretty harsh because normally the forward compatibility break is not this bad.
When 4.3 preferences are loaded in 4.2, certain UI strings fail to draw. Below is just one example.
Repro steps:
Use case:
I have my blender config files symlinked from one place to all blender versions, since I jump between so many different versions all the time for reasons like testing backwards compatibility of my add-ons, or opening old project files to steal tech, or create learning material about them, stuff like that.
I can confirm this issue. I will also mark as high severity as it's a recent regression from developers are free to lower this.
There is a desire for some for of foward compatability between LTS and newer versions of Blender, but I'm not sure how important this is for user preferences compared to something like models.
Also being faced with that bug.
I decided to bisect this
A user preference saved in Main from yesterday (24th of August 2024) does not have issues in builds
108b71047a
and newer.I doubtful this commit will be backported to 4.2, but it's useful to know what caused it for anyone that might try to add forward compatability for this change to 4.2
I think the only thing we'd need in 4.2 is just a check to see if UI_style_get()->widgetlabel.points is zero. And if so then just set it to the default, so UI_DEFAULT_TEXT_POINTS or 11. I think.